[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "yassg-lx"
version = "0.0.1"
authors = [
  { name="lordxarus", email="lordxarus@gmail.com" },
]
description = "A tiny static site generator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
  "pytest",
  "beautifulsoup4",
]

[project.urls]
Issues = "https://github.com/lordxarus/yassg/issues"

[project.scripts]
yassg = "yassg.cli:main"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.setuptools.package-data]
yassg = ["templates/*.html"]
